[package]
name = "fancy_print"
version = "0.1.0"
edition = "2021"
description = "Easily print animated ASCII text to the terminal!"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
